1999-11-26   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* mime-edit.el (mime-edit-pgp-user-id): New variable.
	(mime-edit-sign-pgp-mime): Undo last change; refer
	`mime-edit-pgp-user-id'.
	(mime-edit-encrypt-pgp-mime): Ditto.

	* pgg-gpg.el, pgg-pgp.el, pgg-pgp5.el
	(encrypt-region): Refer `pgg-<impl>-user-id' if specified.
	(sign-region): Ditto.
	(decrypt-region): Ditto.
	(insert-key): Ditto.

1999-11-26   Nakagawa, Makoto  <Makoto.Nakagawa@jp.compaq.com>

	* mime-edit.el (mime-edit-sign-pgp-mime): Regard
	`pgg-default-user-id' as more preferrable if it's specified.
	(mime-edit-encrypt-pgp-mime): Ditto.

1999-11-22   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* semi-def.el (mime-user-interface-product): Bump up to
	EMIKO 1.13.8.

	* pgg.el (pgg-remove-passphrase-cache): Don't unbind passphrase.

1999-11-20   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* mime-edit.el (mime-edit-sign-pgp-mime): Bind
	`pgg-default-user-id' to the canonical address of From field.

	* pgg-def.el (pgg-cache-passphrase): New user option.

	* pgg.el (pgg-read-passphrase): Refer `pgg-cache-passphrase'.
	(pgg-remove-passphrase-cache): Fill cached passphrase with `_'.

	* pgg-gpg.el, pgg-pgp.el, pgg-pgp5.el (sign-region): Refer
	`pgg-cache-passphrase'.

1999-11-17  Katsumi Yamaoka <yamaoka@jpl.org>

	* mime-image.el (mime-display-image): Use
	`mime-image-normalize-xbm' if the feature `xemacs' is provided or
	the variable `image-types' is bound.

1999-11-17   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* mime-image.el (mime-image-normalize-xbm): Work for the future
	FSF Emacsen as well.
	(mime-display-image): Always use `mime-image-normalize-xbm'.

1999-11-17  Katsumi Yamaoka <yamaoka@jpl.org>

	* mime-image.el (mime-image-normalize-xbm): New macro.
	(mime-display-image): Use it.

1999-11-13   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* pgg.el (pgg-temp-buffer-show-function): New function.
	(pgg-display-output-buffer): Use it.
	(pgg-save-coding-system): Use buffer narrowing.